kubernetes/ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "argocd-ingress-ip"
    networking.gke.io/managed-certificates: "argocd-managed-cert"
spec:
  rules:
    - host: argocd.usreliance.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
