kubernetes/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "command-center-ingress-ip"
    networking.gke.io/managed-certificates: "grafana-managed-cert"
spec:
  rules:
    - host: grafana.usreliance.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: command-center-monitoring-grafana
                port:
                  number: 80
